# character_encoding

./: .gitignore  README.md  configuration.toml  get_encoding.py  output_image.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
